[package]
name = "LudumDare51"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = "0.8.1"
bevy_prototype_lyon = "0.6"
rand = "0.8.0"
rand_pcg = "0.3.1"
bevy_egui = "0.16"
egui = "0.19"
serde = { version = "1", features = ["derive"] }
ron = "0.8"
bevy-inspector-egui = { version = "0.13.0" }
lazy_static = "1.0"
pathfinding = "3.0.13"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.bevy_rapier3d]
opt-level = 3